Vertex Game added to Project Overview

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -88,6 +88,24 @@
                 </div>
             </div>
         </div>
+        <div class="project vertex-game">
+            <div class="image">
+                <img src="img/logo/vertex.png">
+            </div>
+            <div class="details">
+                <div class="name">Vertex Game</div>
+                <div class="description">Clone of the popular Vertex-Game on the New York Times Website.</div>
+                <div class="tags">
+                    <div class="tag html">Html</div>
+                    <div class="tag css">Css</div>
+                    <div class="tag javascript">Javascript</div>
+                </div>
+                <div class="buttons">
+                    <div class="source button"><div class="bg"></div><a target="_blank" href="https://github.com/Nico-Src/VS-Code-Portfolio/tree/master/projects/vertex-game" class="text">Source Code</a></div>
+                    <div class="demo button"><div class="bg"></div><a target="_blank" href="https://nico-src.github.io/VS-Code-Portfolio/projects/vertex-game" class="text">Live Demo</a></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script>
@@ -192,12 +210,14 @@
     .editor .sub-content .projects .project.audio-viz .image{ background-color: #6e91f1; }
     .editor .sub-content .projects .project.puzzle .image{ background-color: #dd9a17; }
     .editor .sub-content .projects .project.voxel-game .image{ background-color: #4f3624; }
+    .editor .sub-content .projects .project.vertex-game .image{ background-color: #548693; }
 
     .editor .sub-content .projects .project.mangadb:hover{ border-color: #DDD; }
     .editor .sub-content .projects .project.lego:hover{ border-color: rgb(211, 46, 46); }
     .editor .sub-content .projects .project.audio-viz:hover{ border-color: #6e91f1; }
     .editor .sub-content .projects .project.puzzle:hover{ border-color: #dd9a17; }
     .editor .sub-content .projects .project.voxel-game:hover{ border-color: #4f3624; }
+    .editor .sub-content .projects .project.vertex-game:hover{ border-color: #548693; }
 
     .editor .sub-content .projects .project .image img{
         width: 80%;
