Commented, Code cleaned and Debug Mode modified

--- a/projects/vertex-game/index.html
+++ b/projects/vertex-game/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Lib</title>
+    <title>Vertex Game</title>
     <link rel="stylesheet" href="css/index.css">
+    <div class="debug-info">
+        <div id="frametime" class="stat"><span class="label">Frametime:</span><span class="value"></span></div>
+        <div id="fps" class="stat"><span class="label">FPS:</span><span class="value"></span></div>
+        <div id="total-vertices" class="stat"><span class="label">Total Vertices:</span><span class="value"></span></div>
+        <div id="total-faces" class="stat"><span class="label">Total Faces:</span><span class="value"></span></div>
+    </div>
 </head>
 <body>
     
