--- a/projects/windows-11/index.html
+++ b/projects/windows-11/index.html
@@ -2,6 +2,7 @@
 <html >
 <head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="/VS-Code-Portfolio/projects/windows-11/favicon.ico">
 <link rel="stylesheet" href="/VS-Code-Portfolio/projects/windows-11/nuxt/entry.df3eff1b.css">
 <link rel="stylesheet" href="/VS-Code-Portfolio/projects/windows-11/nuxt/swiper-vue.25ac1039.css">
 <link rel="modulepreload" as="script" crossorigin href="/VS-Code-Portfolio/projects/windows-11/nuxt/entry.169eea64.js">
